# Cpp4PyDevs

./: .buildinfo  .gitignore  PURSUE-cpp_basics.html  PURSUE-cpp_basics.md  README.md  c0.html  c1.html  c2.html  c3.html  c4.html  c5.html  c6.html  c7.html  dev-notes.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.html
_downloads/028ad17ef8ac59b6a5de38beff968721/: helloworld.cpp
_sources/: PURSUE-cpp_basics.md  c0.md  c1.md  c2.md  c3.md  c4.md  c5.md  c6.md  c7.md  intro.md  setup.md
examples/: ageio.cpp  globconst.cpp  helloworld.cpp  passbyref.cpp  passingarrays.cpp  preprocdefs.cpp  usingvars.cpp
examples_cpp/: c1_godbolt.cpp  c2_addrofop.cpp  c2_breakcont.cpp  c2_classperm.cpp  c2_cpparr.cpp  c2_cppeg.cpp  c2_dowhile.cpp  c2_for.cpp  c2_ifelse.cpp  c2_ifelse2.cpp  c2_outofarr.cpp  c2_switch.cpp  c2_vectspushback.cpp  c2_vectspushbackold.cpp  c2_while.cpp  c4_destruc.cpp  c4_inh.cpp  c4_passbypoint.cpp  c4_passbyref.cpp  c4_passbyval.cpp  c5_classeg.cpp  funcexample.cpp  godbolt.cpp  helloworld.cpp  noinit.cpp  printfunct.cpp  usingstrings.cpp
examples_py/: c2_breakcont.py  c2_dowhile.py  c2_except.py  c2_funcs.py  c2_ifelse.py  c2_ifelse2.py  c2_pyeg.py  c2_switch.py  func.py
exercises_cpp/: c4_1.cpp
pursue-cpp-book/: _config.yml  _toc.yml  c1.md  c2.md  c3.md  c4.md  c6.md  c7.md
pursue-cpp-book/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  (+1 more)
root_code/: MakeHistogram.cpp  MakeHistogram.py
(+3 files in other folders)
