[tool.poetry]
name = "pursue-cpp"
version = "0.1.0"
description = "Basic C++ tutorial for PURSUE internship"
authors = ["roy <roy.cruz@upr.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
